Better qt5qml and property read/write

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,9 @@ members = [
     "compiler",
     "macros",
     "qt5qml",
+    "tests/properties",
     "examples/qobject"
 ]
+
+#[profile.bench]
+#lto = true
