--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 cc = "^1.0.50"
 pkg-config = "^0.3.17"
 lazy_static = "1.4.0"
+qt5qml = { path = "../qt5qml" }
+regex = "1"
 
 [dev-dependencies]
 tempfile = "3.1.0"
