--- a/tests/listmodel/Cargo.toml
+++ b/tests/listmodel/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "test-signals"
+name = "test-listmodel"
 version = "0.1.0"
 authors = ["R1tschY <r1tschy@posteo.de>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 qt5qml = { path = "../../qt5qml" }
@@ -12,3 +10,4 @@ qt5qml = { path = "../../qt5qml" }
 [build-dependencies]
 qobject-compiler = { path = "../../compiler" }
 pkg-config = "0.3"
+qt5qml = { path = "../../qt5qml" }
